# pyzhenya

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyzhenya/: __init__.py  pyzhenya.py
tests/: helpers.py  test_pyzhenya.py
