[tool.poetry]
name = "pyzhenya"
version = "0.0.1"
description = "A hodge-podge of utilities for my personal use."
authors = ["Zhenya Kalenkovich"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
