[tool.poetry]
name = "pyzhenya"
version = "0.0.1"
description = "A hodge-podge of utilities for my personal use."
authors = ["Zhenya Kalenkovich"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pillow = ">=10.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
nbsphinx = "^0.9.3"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
